--- a/web/css/site.css
+++ b/web/css/site.css
@@ -96,13 +96,21 @@ a.desc:after {
     border: none;
 }
 
-div .eauth {
+div a .eauth {
     overflow: unset;
 }
 
 div .eauth-service {
     margin-top: -35px;
     padding-left: 55px;
+}
+
+div .address {
+    padding-top: 65px;
+}
+
+div .navbar-brand {
+    padding: 5px 15px; !important;
 }
 
 @media(max-width:767px) {
